maj privacy policy

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <h1>Règles de confidentialités :</h1>
 
-
+<p>My Movies s'engage à ne collecter aucun renseignement personnel ni aucune donnée personnelle, d'aucune sorte que ce soit.</p>
